--- a/public/css/custom/custom.css
+++ b/public/css/custom/custom.css
@@ -1,15 +1,21 @@
 nav {
- background-color: #3c4646 !important;
+ background-color: #3A4B54 !important;
+ height: 100px !important;
 }
 
 nav .brand-logo{
  padding-left: 2%;
- background-color: #3c4646 !important;  
+ background-color: #3A4B54 !important;  
  font-family: 'Roboto', sans-serif !important;
+ height: 100px;
+}
+
+nav .brand-logo h5{
+ padding-top: 5%;
 }
 
 .nav-wrapper img{
-    height: 64px;
+    height: 100px;
     padding-left: 1%;
 }
 
