--- a/public/partials/residentMap.client.html
+++ b/public/partials/residentMap.client.html
@@ -1,7 +1,7 @@
  <section>
             <div class="ibm-widget card">
               <div class="card-content">
-              <div class="card-title"><i class="material-icons">my_location</i>&nbsp;&nbsp;Last activities of residents</div>
+              <div class="card-title"><i class="material-icons">my_location</i>&nbsp;&nbsp;Locations of Residents</div>
                   <div id="map"></div>
               </div>
               <div class="card-action">
@@ -78,7 +78,7 @@
            </div>
     <!-- END of google map -->
     <!-- initMap() defined here, it has to be called after google map has been added to the DOM document, that's why it's here--> 
-    <script src="js/googleMap.js"></script>
+    <script src="js/googleMap.service.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp7zB3Ra5P8pSVC8-B-YZszN-LGjJvnRQ&callback=initMap">
     </script>
