--- a/public/partials/home.client.html
+++ b/public/partials/home.client.html
@@ -7,15 +7,17 @@
            <div ng-include src="'partials/quake.client.html'"></div>
           </div>
           <!-- END of earthquake sensors -->
-        <div class="col m6 s12">
-            <div ng-include src="'partials/residentMap.client.html'"></div>
-        </div>
+          <div class="col m6 s12">
+              <div ng-include src="'partials/residentMap.client.html'"></div>
+          </div>
         </div>
         <div class="row">
         <div class="col m6 s12">
-            <div ng-include src="'partials/flood.client.html'"></div>
+            <div ng-include src="'partials/tsunami.client.html'"></div>
         </div>
-        
+        <div class="col m6 s12">
+            <div ng-include src="'partials/temperature.client.html'"></div>
+        </div>
      </div>
   </div> 
 </div>   
