modularized client services

--- a/public/partials/quake.client.html
+++ b/public/partials/quake.client.html
@@ -46,6 +46,7 @@
         </div>
     </div>
     <script src="/scripts/chart.js/Chart.js"></script>
+    <script src="js/quake.service.js"></script>
     <script>initializeLineChart();</script>     
     <script> $(document).ready(function(){
       $('.tooltipped').tooltip({delay: 50});
