--- a/public/partials/tsunami.client.html
+++ b/public/partials/tsunami.client.html
@@ -44,6 +44,7 @@
         </div>
     </div>
     <script src="/scripts/chart.js/Chart.js"></script>
+    <script src="js/tsunami.service.js"></script>
     <script>initializePolarChart();
     $(document).ready(function(){
       $('.tooltipped').tooltip({delay: 50});
