--- a/public/partials/temperature.client.html
+++ b/public/partials/temperature.client.html
@@ -44,6 +44,7 @@
         </div>
     </div>
     <script src="/scripts/chart.js/Chart.js"></script>
+    <script src="js/temperature.service.js"></script>
     <script>initializeBarChart();
      $(document).ready(function(){
        $('.tooltipped').tooltip({delay: 50});
