--- a/public/partials/temperature.client.html
+++ b/public/partials/temperature.client.html
@@ -1,7 +1,7 @@
  <section>
     <div class="ibm-widget card">
               <div class="card-content">
-              <div class="card-title"><i class="material-icons">insert_chart</i>&nbsp;&nbsp;Indoor temperature sensors</div>
+              <div class="card-title"><i class="material-icons">insert_chart</i>&nbsp;&nbsp;Fire sensors</div>
                   <canvas id="temperatureCanvas" height="370" width="700"></canvas>
               </div>
               <div class="card-action">
@@ -13,7 +13,7 @@
                       </a>
                     </div>
                     <div class="col m2 s8">
-                       <a class="waves-effect waves-light btn cyan-btn high-btn"></a>
+                     <p>sensor off</p>
                     </div>
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionGirl}}> 
@@ -21,7 +21,7 @@
                       </a>
                     </div>
                     <div class="col m2 s8">
-                       <a class="waves-effect waves-light btn green-btn high-btn"></a>
+                       <a class="waves-effect waves-light btn-floating green-btn small-btn"></a>
                     </div>
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionOneEye}}> 
@@ -29,7 +29,7 @@
                       </a>
                     </div>
                     <div class="col m2 s8">
-                       <a class="waves-effect waves-light btn yellow-btn high-btn"></a>
+                     <p>sensor off</p>
                     </div>
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionDuck}}> 
@@ -37,8 +37,9 @@
                       </a>
                     </div>
                     <div class="col m2 s8">
-                       <a class="waves-effect waves-light btn gray-btn high-btn"></a>
+                       <a class="waves-effect waves-light btn-floating green-btn small-btn"></a>
                     </div>
+                     -->
                 </div>
    
         </div>
