--- a/public/partials/tsunami.client.html
+++ b/public/partials/tsunami.client.html
@@ -1,4 +1,4 @@
- <section>
+ <section >
     <div class="ibm-widget card">
               <div class="card-content" >
               <div class="card-title"><i class="material-icons">invert_colors</i>&nbsp;&nbsp;Tsunami sensors</div>
@@ -6,7 +6,7 @@
                     <div class="col m6">
                         <canvas id="humitureCanvas1" height="350"></canvas>
                     </div>
-                    <div id="raindropCanvas" class="col m6">
+                    <div ng-class="raindrop? 'ibm-rain':''" class="col m6">
                         <canvas id="humitureCanvas2" height="350"></canvas>
                     </div>
                   </div>
