Reset server sensor alerts when new client starts.

--- a/public/partials/home.client.html
+++ b/public/partials/home.client.html
@@ -1,5 +1,5 @@
 <section>     
-<div ng-controller="HomeController" >   
+<div ng-controller="HomeController" ng-init="oneTimeInit()">   
        <br>
        <div class="col m12 s12"> 
        <div class="row">
