added all sensors to GUI and removed upperbound from rainSensor

--- a/public/partials/quake.client.html
+++ b/public/partials/quake.client.html
@@ -6,7 +6,7 @@
               </div>
               <div class="card-action">
                  <div class="row">
-                  <!-- minion Finnie -->
+                  <!-- minion -->
                     <div class="col m1 s4">
                     <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minion}}> 
                     <img src="images/freeMinionIcons/minion.png"></a>
@@ -14,7 +14,7 @@
                     <div class="col m5 s8">
                        <a class="waves-effect waves-light btn long-btn cyan-btn"></a>
                     </div>
-                  <!-- minion Lab -->
+                  <!-- minion girl -->
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionGirl}}> 
                         <img src="images/freeMinionIcons/miniongirl.png">
@@ -24,7 +24,7 @@
                       <a class="waves-effect waves-light btn long-btn green-btn"></a>
                     </div>
                 </div>
-                <!-- minion Kai -->
+                <!-- minion one eye -->
                 <div class="row">
                   <div class="col m1 s4">
                    <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionOneEye}}> 
@@ -34,13 +34,14 @@
                   <div class="col m5 s8">
                     <a class="waves-effect waves-light btn long-btn yellow-btn"></a>
                   </div>
+                    <!-- minion duck -->
                   <div class="col m1 s4">
                    <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionDuck}}> 
                       <img src="images/freeMinionIcons/minionduck.png">
                    </a>
                   </div>
                   <div class="col m5 s8">
-                      <p class="text-white">I have no quake sensor...</p>
+                      <a class="waves-effect waves-light btn long-btn gray-btn"></a>
                   </div>
                 </div>
         </div>
