--- a/public/partials/residentMap.client.html
+++ b/public/partials/residentMap.client.html
@@ -6,7 +6,7 @@
               </div>
               <div class="card-action">
                <div class="row">
-                   <!-- minion Liam -->
+                   <!-- minion -->
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minion}}> 
                         <img src="images/freeMinionIcons/minion.png">
@@ -24,7 +24,7 @@
                           </p>
                         </div>
                     </div>
-                    <!-- minion Nicole -->
+                    <!-- minion girl -->
                     <div class="col m1 s4">
                      <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionGirl}}> 
                         <img src="images/freeMinionIcons/miniongirl.png">
@@ -43,7 +43,7 @@
                      </div>
                     </div>
               </div>
-              <!-- minion Kai -->
+              <!-- minion one eye -->
               <div class="row">
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionOneEye}}> 
@@ -62,7 +62,7 @@
                           </p>
                          </div>
                     </div>
-                     <!-- minion Pradeep & Shalini -->
+                     <!-- minion duck -->
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionDuck}}> 
                         <img src="images/freeMinionIcons/minionduck.png">
