--- a/public/partials/temperature.client.html
+++ b/public/partials/temperature.client.html
@@ -1,7 +1,7 @@
  <section>
     <div class="ibm-widget card">
               <div class="card-content">
-              <div class="card-title"><i class="material-icons">insert_chart</i>&nbsp;&nbsp;Fire sensors</div>
+              <div class="card-title"><i class="material-icons">insert_chart</i>&nbsp;&nbsp;Wild fire sensors</div>
                   <canvas id="temperatureCanvas" height="370" width="700"></canvas>
               </div>
               <div class="card-action">
@@ -12,32 +12,34 @@
                         <img src="images/freeMinionIcons/minion.png">
                       </a>
                     </div>
-                    <div class="col m2 s8">
-                     <p>sensor off</p>
+                    <div class="col m5 s8">
+                    <a class="waves-effect waves-light btn cyan-btn high-btn"></a>
                     </div>
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionGirl}}> 
                         <img src="images/freeMinionIcons/miniongirl.png">
                       </a>
                     </div>
-                    <div class="col m2 s8">
-                       <a class="waves-effect waves-light btn-floating green-btn small-btn"></a>
+                    <div class="col m5 s8">
+                       <a class="waves-effect waves-light btn green-btn high-btn"></a>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionOneEye}}> 
                         <img src="images/freeMinionIcons/miniononeeye.png">
                       </a>
                     </div>
-                    <div class="col m2 s8">
-                     <p>sensor off</p>
+                    <div class="col m5 s8">
+                       <a class="waves-effect waves-light btn yellow-btn high-btn"></a>
                     </div>
                     <div class="col m1 s4">
                       <a class="tooltipped waves-effect waves-light" data-position="top" data-delay="10" data-tooltip={{minionDuck}}> 
                         <img src="images/freeMinionIcons/minionduck.png">
                       </a>
                     </div>
-                    <div class="col m2 s8">
-                       <a class="waves-effect waves-light btn-floating green-btn small-btn"></a>
+                    <div class="col m5 s8">
+                       <a class="waves-effect waves-light btn gray-btn high-btn"></a>
                     </div>
                      -->
                 </div>
